New metric Info endpoint /metricinfo/{mid}
